@@ -8492,7 +8492,7 @@ words.
 	<name>button75</name>
 	<can_default>True</can_default>
 	<can_focus>True</can_focus>
-	<stock_button>GNOME_STOCK_BUTTON_CANCEL</stock_button>
+	<stock_button>GNOME_STOCK_BUTTON_CLOSE</stock_button>
       </widget>
     </widget>
 
@@ -10054,7 +10054,7 @@ quit without making any changes.</text>
 	<can_focus>True</can_focus>
 	<columns>1</columns>
 	<column_widths>80</column_widths>
-	<selection_mode>GTK_SELECTION_SINGLE</selection_mode>
+	<selection_mode>GTK_SELECTION_BROWSE</selection_mode>
 	<show_titles>True</show_titles>
 	<shadow_type>GTK_SHADOW_IN</shadow_type>
 
@@ -10267,7 +10267,7 @@ quit without making any changes.</text>
 	<can_focus>True</can_focus>
 	<columns>3</columns>
 	<column_widths>150,34,25</column_widths>
-	<selection_mode>GTK_SELECTION_SINGLE</selection_mode>
+	<selection_mode>GTK_SELECTION_BROWSE</selection_mode>
 	<show_titles>True</show_titles>
 	<shadow_type>GTK_SHADOW_IN</shadow_type>
 
